--- a/Views/Products/Create2.cshtml
+++ b/Views/Products/Create2.cshtml
@@ -35,6 +35,7 @@
     <hr />
     <div class="row">
         <div class="col-md-4">
+            @ViewData["message"]
             <form action="@Url.Action("Create3", "Products")" method="get">
                 <div id="container" class="form-group"></div>
                 <div class="form-group">
