--- a/Views/UserManagement/updateInfoAdmin.cshtml
+++ b/Views/UserManagement/updateInfoAdmin.cshtml
@@ -9,7 +9,7 @@
 
 <div class="row">
     <div class="col-md-6">
-        <form asp-action="updateInfo" method="post">
+        <form asp-action="updateInfoAdmin" method="post">
             <h4>Update Account Info.</h4>
             <div asp-validation-summary="All" class="text-danger"></div>
             <input asp-for="UserId" type="hidden" />
@@ -53,12 +53,11 @@
                 <input asp-for=" Email" class="form-control" />
                 <span asp-validation-for=" Email" class="text-danger"></span>
             </div>
-                   
-            <a asp-area="Identity" asp-page="/Account/Manage/Index">Verder Instellingen</a>
-            <br>
              <input type="submit" class="btn btn-success" value="Save" />
+          
 
         </form>
+
     </div>
 </div>
 </div>
