--- a/Views/Category/Index.cshtml
+++ b/Views/Category/Index.cshtml
@@ -323,7 +323,21 @@
 else
 {
     <div class="container" id="noResultsArea">
-        <h4 style="text-align: left;">@Model.CategoryPath</h4>
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                @for (int i = Model.CategoryPath.Count() - 1; i >= 0; i--)
+                {
+                    if (i != 0)
+                    {
+                        <li class="breadcrumb-item"><a asp-action="Index" asp-route-categoryId="@Model.CategoryPath[i][0]">@Model.CategoryPath[i][1]</a></li>
+                    }
+                    else
+                    {
+                        <li class="breadcrumb-item active" aria-current="page">@Model.CategoryPath[i][1]</li>
+                    }
+                }
+            </ol>
+        </nav>
         <br>
         <img id="noResultsImg" src="~/images/EmptyResults.jpg">
         <br>
