--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="~/css/layout.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
     <title>@("Webshop - " + ViewData["Title"])</title>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -48,9 +49,9 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Mijn Profiel</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="@Url.Action("Index", "Favorites")">Favorieten</a>
+                    <a class="dropdown-item" href="@Url.Action("Index", "Favorites")" id="favoritesLink">Favorieten</a>
                     <a class="dropdown-item" href="@Url.Action("oldOrders", "Cart")">Bestelgeschiedenis</a>
-                    <a class="dropdown-item" href="@Url.Action("Index", "Cart")">Winkelmand</a>
+                    <a class="dropdown-item" href="@Url.Action("Index", "Cart")" id="cartLink">Winkelmand</a>
                     <a class="dropdown-item" href="@Url.Action("Index", "userdetail")">user detail</a>
                 </div>
             </li>
@@ -87,8 +88,6 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
 
     <script src="~/js/site.js" asp-append-version="true"></script>
-    
-    <script src="~/js/headerProductsDropDown.js"></script>
 
 </environment>
 
@@ -117,8 +116,6 @@
     </script>
 
     <script src="~/js/site.min.js" asp-append-version="true"></script>
-    
-    <script src="~/js/headerProductsDropDown.js"></script>
 
 </environment>
 @RenderSection("Scripts", required: false)
@@ -126,40 +123,40 @@
 <div class="footer">
     <div class="footeritemContainer">
         <div class="footerItem">
-                <ul>
-                    <li>
-                        <b><a>Klantenservice</a></b>
-                        <ul>
-                            <li>
-                                <a>Contact</a>
-                            </li>
-                            <li>
-                                <a>Bestellen & Leveren</a>
-                            </li>
-                            <li>
-                                <a>Betalen</a>
-                            </li>
-                            <li>
-                                <a>Retourneren</a>
-                            </li>
-                            <li>
-                                <a>Garantie & Reparatie</a>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
+            <ul>
+                <li>
+                    <b><a>Klantenservice</a></b>
+                    <ul>
+                        <li>
+                            <a>Contact</a>
+                        </li>
+                        <li>
+                            <a>Bestellen & Leveren</a>
+                        </li>
+                        <li>
+                            <a>Betalen</a>
+                        </li>
+                        <li>
+                            <a>Retourneren</a>
+                        </li>
+                        <li>
+                            <a>Garantie & Reparatie</a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
         </div>
         <div class="footerItem">
-                <ul>
-                    <li>
-                        <b><a>Over Ons</a></b>
-                        <ul>
-                            <li>
-                                <a>De voordelen van SailingBoys</a>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>            
+            <ul>
+                <li>
+                    <b><a>Over Ons</a></b>
+                    <ul>
+                        <li>
+                            <a>De voordelen van SailingBoys</a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>            
         </div>
         <hr/>
 
@@ -170,6 +167,10 @@
 </div>
 
 </body>
+<!-- Custom scripts -->
+<script src="~/js/header/productsDropdown.js"></script>
+<script src="~/js/header/headerBadges.js"></script>
+
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
