Fixed some merge mistakes

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -87,8 +87,6 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
 
     <script src="~/js/site.js" asp-append-version="true"></script>
-    
-    <script src="~/js/headerProductsDropDown.js"></script>
 
 </environment>
 
@@ -117,8 +115,6 @@
     </script>
 
     <script src="~/js/site.min.js" asp-append-version="true"></script>
-    
-    <script src="~/js/headerProductsDropDown.js"></script>
 
 </environment>
 @RenderSection("Scripts", required: false)
@@ -126,40 +122,40 @@
 <div class="footer">
     <div class="footeritemContainer">
         <div class="footerItem">
-                <ul>
-                    <li>
-                        <b><a>Klantenservice</a></b>
-                        <ul>
-                            <li>
-                                <a>Contact</a>
-                            </li>
-                            <li>
-                                <a>Bestellen & Leveren</a>
-                            </li>
-                            <li>
-                                <a>Betalen</a>
-                            </li>
-                            <li>
-                                <a>Retourneren</a>
-                            </li>
-                            <li>
-                                <a>Garantie & Reparatie</a>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
+            <ul>
+                <li>
+                    <b><a>Klantenservice</a></b>
+                    <ul>
+                        <li>
+                            <a>Contact</a>
+                        </li>
+                        <li>
+                            <a>Bestellen & Leveren</a>
+                        </li>
+                        <li>
+                            <a>Betalen</a>
+                        </li>
+                        <li>
+                            <a>Retourneren</a>
+                        </li>
+                        <li>
+                            <a>Garantie & Reparatie</a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
         </div>
         <div class="footerItem">
-                <ul>
-                    <li>
-                        <b><a>Over Ons</a></b>
-                        <ul>
-                            <li>
-                                <a>De voordelen van SailingBoys</a>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>            
+            <ul>
+                <li>
+                    <b><a>Over Ons</a></b>
+                    <ul>
+                        <li>
+                            <a>De voordelen van SailingBoys</a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>            
         </div>
         <hr/>
 
@@ -170,6 +166,9 @@
 </div>
 
 </body>
+<!-- Optional JavaScript -->
+<script src="~/js/header/headerBadges.js"></script>
+<script src="~/js/header/productsDropdown.js"></script>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
