--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -124,21 +124,21 @@
         <div class="footerItem">
             <ul>
                 <li>
-                    <b><a>Klantenservice</a></b>
+                    <b><a >Klantenservice</a></b>
                     <ul>
-                        <li>
+                        <li class="footerLi">
                             <a>Contact</a>
                         </li>
-                        <li>
+                        <li class="footerLi">
                             <a>Bestellen & Leveren</a>
                         </li>
-                        <li>
-                            <a>Betalen</a>
+                        <li class="footerLi">
+                            <a asp-action="betalen" asp-controller="FooterPages">Betalen</a>
                         </li>
-                        <li>
+                        <li class="footerLi">
                             <a>Retourneren</a>
                         </li>
-                        <li>
+                        <li class="footerLi">
                             <a>Garantie & Reparatie</a>
                         </li>
                     </ul>
@@ -150,7 +150,7 @@
                 <li>
                     <b><a>Over Ons</a></b>
                     <ul>
-                        <li>
+                        <li class="footerLi">
                             <a>De voordelen van SailingBoys</a>
                         </li>
                     </ul>
