--- a/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -1,7 +1,7 @@
 @page
 @model IndexModel
 @{
-    ViewData["Title"] = "Manage jouw Account";
+    ViewData["Title"] = "Manage uw account";
 }
 <link rel="stylesheet" href="~/css/edit_product.css">
 
